--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,7 +10,7 @@
         font-size: 1.4rem;
         height: 7rem;
         background-color: var(--color-white);
-        border-bottom: var(--color-grey-light-2);
+        border-bottom: var(--line);
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -30,9 +30,29 @@
         .hotel-view {
             background-color: var(--color-white);
             flex: 1;
-            height: 80rem;
+
+            .detail {
+                font-size: 1.4rem;
+                display: flex;
+                padding: 4.5rem;
+                background-color: var(--color-grey-light-1);
+                border-bottom: var(--line);
+
+                .description {
+                    background-color: var(--color-white);
+                    box-shadow: var(--shadow-light);
+                    flex: 0 0 60%;
+                    margin-right: 4.5rem;
+                    padding: 3rem;
+                }
+
+                .user-reviews {
+                    flex: 1;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+            }
         }
     }
-
-
 }
