--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,3 +1,5 @@
+@use './base' as *;
+
 .container {
     max-width: 120rem;
     margin: 8rem auto;
@@ -5,6 +7,12 @@
     box-shadow: var(--shadow-dark);
 
     min-height: 50rem;
+
+    @media only screen and (max-width: $bp-largest) {
+        margin: 0;
+        max-width: 100%;
+        width: 100%;
+    }
 
     .header {
         font-size: 1.4rem;
@@ -14,10 +22,20 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        @media only screen and (max-width: $bp-smallest) {
+            flex-wrap: wrap;
+            height: 11rem;
+            align-content:space-around;
+        }
     }
 
     .content {
         display: flex;
+
+        @media only screen and (max-width: $bp-medium) {
+            flex-direction: column;
+        }
 
         .sidebar {
             background-color: var(--color-grey-dark-1);
@@ -38,12 +56,30 @@
                 background-color: var(--color-grey-light-1);
                 border-bottom: var(--line);
 
+                @media only screen and (max-width: $bp-medium) {
+                    padding: 3rem;
+                }
+
+                @media only screen and (max-width: $bp-small) {
+                    flex-direction: column;
+                }
+
                 .description {
                     background-color: var(--color-white);
                     box-shadow: var(--shadow-light);
                     flex: 0 0 60%;
                     margin-right: 4.5rem;
                     padding: 3rem;
+
+                    @media only screen and (max-width: $bp-medium) {
+                        padding: 2rem;
+                        margin-right: 3rem;
+                    }
+
+                    @media only screen and (max-width: $bp-small) {
+                        margin-right: 0;
+                        margin-bottom: 3rem;
+                    }
                 }
 
                 .user-reviews {
